* ZF-3163: Zend_Ldap option type casting * ZF-2571: Added {g,s}etOptions to Zend_Auth_Adapter_Ldap * ZF-3019: Changed Zend_Ldap bind slightly to acommadate OpenLDAP < 2.2 * ZF-2994: Corrected Zend_Ldap anonymous bind usage * ZF-3289: Added support for START_TLS in Zend_Ldap * Added logic to Zend_Ldap to explicitly block empty string password * Updated Zend_Ldap documentation regarding new useStartTls and allowEmptyPassword options
git-svn-id: http://framework.zend.com/svn/framework/standard/trunk@10171 44c647ce-9c0f-0410-b52a-842ac1e357ba

--- a/tests/TestConfiguration.php.dist
+++ b/tests/TestConfiguration.php.dist
@@ -289,7 +289,8 @@ define('TESTS_ZEND_LDAP_ONLINE_ENABLED', false);
  *
  * Example Configuration for Active Directory:
  *                      HOST: dc1.w.net
- *                   USE_SSL: true
+ *             USE_START_TLS: true
+ *                   USE_SSL: false
  *                  USERNAME: CN=User 1,CN=Users,DC=w,DC=net
  *            PRINCIPAL_NAME: user1@w.net
  *             LDAP_PASSWORD: pass1
@@ -315,6 +316,7 @@ define('TESTS_ZEND_LDAP_ONLINE_ENABLED', false);
  */
 define('TESTS_ZEND_LDAP_HOST', 'localhost');
 //define('TESTS_ZEND_LDAP_PORT', 389);
+define('TESTS_ZEND_LDAP_USE_START_TLS', true);
 //define('TESTS_ZEND_LDAP_USE_SSL', false);
 define('TESTS_ZEND_LDAP_USERNAME', 'CN=someUser,DC=example,DC=com');
 define('TESTS_ZEND_LDAP_PRINCIPAL_NAME', 'someUser@example.com');
