--- a/documentation/manual/en/manual.xml.in
+++ b/documentation/manual/en/manual.xml.in
@@ -272,6 +272,13 @@
         <xi:include href="module_specs/Zend_OpenId-Consumer.xml" />
         <xi:include href="module_specs/Zend_OpenId-Provider.xml" />
     </chapter>
+    <chapter id="zend.paginator">
+        <title>Zend_Paginator</title>
+        <xi:include href="module_specs/Zend_Paginator-Introduction.xml" />
+        <xi:include href="module_specs/Zend_Paginator-Usage.xml" />
+        <xi:include href="module_specs/Zend_Paginator-Configuration.xml" />
+        <xi:include href="module_specs/Zend_Paginator-Advanced.xml" />
+    </chapter>
     <chapter id="zend.pdf">
         <title>Zend_Pdf</title>
         <xi:include href="module_specs/Zend_Pdf-Introduction.xml" />
