--- a/documentation/manual/ja/manual.xml.in
+++ b/documentation/manual/ja/manual.xml.in
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='UTF-8' ?>
-<!-- EN-Revision: 10132 -->
+<!-- EN-Revision: 10200 -->
 <!DOCTYPE book PUBLIC "-//OASIS//DTD DocBook XML V4.4//EN"
     "@DOCBOOK_DTD@"
 [
@@ -286,6 +286,21 @@
         <xi:include href="module_specs/Zend_OpenId-Introduction.xml" />
         <xi:include href="module_specs/Zend_OpenId-Consumer.xml" />
         <xi:include href="module_specs/Zend_OpenId-Provider.xml" />
+    </chapter>
+    <chapter id="zend.paginator">
+        <title>Zend_Paginator</title>
+        <xi:include href="module_specs/Zend_Paginator-Introduction.xml">
+            <xi:fallback><xi:include href="../en/module_specs/Zend_Paginator-Introduction.xml" /></xi:fallback>
+        </xi:include>
+        <xi:include href="module_specs/Zend_Paginator-Usage.xml">
+            <xi:fallback><xi:include href="../en/module_specs/Zend_Paginator-Usage.xml" /></xi:fallback>
+        </xi:include>
+        <xi:include href="module_specs/Zend_Paginator-Configuration.xml">
+            <xi:fallback><xi:include href="../en/module_specs/Zend_Paginator-Configuration.xml" /></xi:fallback>
+        </xi:include>
+        <xi:include href="module_specs/Zend_Paginator-Advanced.xml">
+            <xi:fallback><xi:include href="../en/module_specs/Zend_Paginator-Advanced.xml" /></xi:fallback>
+        </xi:include>
     </chapter>
     <chapter id="zend.pdf">
         <title>Zend_Pdf</title>
