German docu:  - sync docu with r10116, r1ß117, r10118
git-svn-id: http://framework.zend.com/svn/framework/standard/trunk@10218 44c647ce-9c0f-0410-b52a-842ac1e357ba

--- a/documentation/manual/de/manual.xml.in
+++ b/documentation/manual/de/manual.xml.in
@@ -692,6 +692,9 @@
         <xi:include href="module_specs/Zend_Session-GlobalSessionManagement.xml">
             <xi:fallback><xi:include href="../en/module_specs/Zend_Session-GlobalSessionManagement.xml" /></xi:fallback>
         </xi:include>
+        <xi:include href="module_specs/Zend_Session-SaveHandler-DbTable.xml">
+            <xi:fallback><xi:include href="../en/module_specs/Zend_Session-SaveHandler-DbTable.xml" /></xi:fallback>
+        </xi:include>
     </chapter>
 
     <chapter id="zend.soap">
