German docu:  - sync docu with r10125
git-svn-id: http://framework.zend.com/svn/framework/standard/trunk@10222 44c647ce-9c0f-0410-b52a-842ac1e357ba

--- a/documentation/manual/de/manual.xml.in
+++ b/documentation/manual/de/manual.xml.in
@@ -225,6 +225,15 @@
             <xi:fallback><xi:include href="../en/module_specs/Zend_Debug.xml" /></xi:fallback>
         </xi:include>
     </chapter>
+    <chapter id="zend.dom"> 
+        <title>Zend_Dom</title> 
+        <xi:include href="module_specs/Zend_Dom.xml">
+            <xi:fallback><xi:include href="../en/module_specs/Zend_Dom.xml" /></xi:fallback>
+        </xi:include>
+        <xi:include href="module_specs/Zend_Dom-Query.xml">
+            <xi:fallback><xi:include href="../en/module_specs/Zend_Dom-Query.xml" /></xi:fallback>
+        </xi:include>
+    </chapter> 
     <chapter id="zend.exception">
         <title>Zend_Exception</title>
         <xi:include href="module_specs/Zend_Exception.xml">
@@ -721,6 +730,16 @@
             <xi:fallback><xi:include href="../en/module_specs/Zend_Soap_AutoDiscovery-DataTypes.xml" /></xi:fallback>
         </xi:include>
     </chapter>
+
+    <chapter id="zend.test"> 
+        <title>Zend_Test</title> 
+        <xi:include href="module_specs/Zend_Test.xml">
+            <xi:fallback><xi:include href="../en/module_specs/Zend_Test.xml" /></xi:fallback>
+        </xi:include>
+        <xi:include href="module_specs/Zend_Test-PHPUnit.xml">
+            <xi:fallback><xi:include href="../en/module_specs/Zend_Test-PHPUnit.xml" /></xi:fallback>
+        </xi:include>
+    </chapter> 
 
     <chapter id="zend.timesync">
         <title>Zend_TimeSync</title>
