--- a/documentation/manual/de/manual.xml.in
+++ b/documentation/manual/de/manual.xml.in
@@ -759,6 +759,13 @@
         </xi:include>
     </chapter> 
 
+    <chapter id="zend.text"> 
+        <title>Zend_Text</title> 
+        <xi:include href="module_specs/Zend_Text_Figlet.xml">
+            <xi:fallback><xi:include href="../en/module_specs/Zend_Text_Figlet.xml" /></xi:fallback>
+        </xi:include>
+    </chapter> 
+ 
     <chapter id="zend.timesync">
         <title>Zend_TimeSync</title>
         <xi:include href="module_specs/Zend_TimeSync.xml">
