German docu:  - sync docu with r10200 (untranslated)
git-svn-id: http://framework.zend.com/svn/framework/standard/trunk@10233 44c647ce-9c0f-0410-b52a-842ac1e357ba

--- a/documentation/manual/de/manual.xml.in
+++ b/documentation/manual/de/manual.xml.in
@@ -576,6 +576,21 @@
             <xi:fallback><xi:include href="../en/module_specs/Zend_OpenId-Provider.xml" /></xi:fallback>
         </xi:include>
     </chapter>
+    <chapter id="zend.paginator"> 
+        <title>Zend_Paginator</title> 
+        <xi:include href="module_specs/Zend_Paginator-Introduction.xml">
+            <xi:fallback><xi:include href="../en/module_specs/Zend_Paginator-Introduction.xml" /></xi:fallback>
+        </xi:include>
+        <xi:include href="module_specs/Zend_Paginator-Usage.xml">
+            <xi:fallback><xi:include href="../en/module_specs/Zend_Paginator-Usage.xml" /></xi:fallback>
+        </xi:include>
+        <xi:include href="module_specs/Zend_Paginator-Configuration.xml">
+            <xi:fallback><xi:include href="../en/module_specs/Zend_Paginator-Configuration.xml" /></xi:fallback>
+        </xi:include>
+        <xi:include href="module_specs/Zend_Paginator-Advanced.xml">
+            <xi:fallback><xi:include href="../en/module_specs/Zend_Paginator-Advanced.xml" /></xi:fallback>
+        </xi:include>
+    </chapter> 
     <chapter id="zend.pdf">
         <title>Zend_Pdf</title>
         <xi:include href="module_specs/Zend_Pdf-Introduction.xml">
