--- a/documentation/manual/fr/manual.xml.in
+++ b/documentation/manual/fr/manual.xml.in
@@ -135,9 +135,7 @@
     <chapter id="zend.dom">
         <title>Zend_Dom</title>
         <xi:include href="module_specs/Zend_Dom.xml" />
-        <xi:include href="module_specs/Zend_Dom-Query.xml">
-            <xi:fallback><xi:include href="../en/module_specs/Zend_Dom-Query.xml" /></xi:fallback>
-        </xi:include>
+        <xi:include href="module_specs/Zend_Dom-Query.xml" />
     </chapter>
     <chapter id="zend.exception">
         <title>Zend_Exception</title>
@@ -330,15 +328,11 @@
     </chapter>
     <chapter id="zend.paginator">
         <title>Zend_Paginator</title>
-        <xi:include href="module_specs/Zend_Paginator-Introduction.xml">
-            <xi:fallback><xi:include href="../en/module_specs/Zend_Paginator-Introduction.xml" /></xi:fallback>
-        </xi:include>
-        <xi:include href="module_specs/Zend_Paginator-Usage.xml">
+        <xi:include href="module_specs/Zend_Paginator-Introduction.xml" />
+/        <xi:include href="module_specs/Zend_Paginator-Usage.xml">
             <xi:fallback><xi:include href="../en/module_specs/Zend_Paginator-Usage.xml" /></xi:fallback>
         </xi:include>
-        <xi:include href="module_specs/Zend_Paginator-Configuration.xml">
-            <xi:fallback><xi:include href="../en/module_specs/Zend_Paginator-Configuration.xml" /></xi:fallback>
-        </xi:include>
+        <xi:include href="module_specs/Zend_Paginator-Configuration.xml" />
         <xi:include href="module_specs/Zend_Paginator-Advanced.xml">
             <xi:fallback><xi:include href="../en/module_specs/Zend_Paginator-Advanced.xml" /></xi:fallback>
         </xi:include>
